Work for #5404 - Checkboxes: Items should have limited response area - fixed items alignment in martix columns

--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -33,6 +33,10 @@
   text-align: center;
 }
 .sd-table__cell--item {
+  .sd-selectbase__item {
+    text-align: center;
+  }
+
   .sd-selectbase__label {
     justify-content: center;
   }
